--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,6 +28,10 @@ jobs:
           docker push maithililok/my-devops-app:latest.
 
       - name: Confirm login works
+         run: |
+           docker info | grep -i Username
+
+      - name: Confirm login works
         run: |
          docker info | grep -i Username
 
