--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Debug token length
+        run: |
+         echo "Token chars: $(echo -n "${{ secrets.DOCKERHUB_TOKEN }}" | wc -c)"
 
       - name: Log in to Docker Hub
         run: |
