--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,9 +18,8 @@ jobs:
          echo "Token chars: $(echo -n "${{ secrets.DOCKERHUB_TOKEN }}" | wc -c)"
 
       - name: Log in to Docker Hub
-        run: |
-         echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
-
+        run:  echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
+   
       - name: Build Docker image
         run: |
           docker build -t maithililok/my-devops-app:latest .
