--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -22,5 +22,6 @@ jobs:
     - name: Build and push image
       uses: docker/build-push-action@v5
       with:
+        context: .
         push: true
         tags: maithililok/my-devops-app:latest
